--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -25,6 +25,7 @@
 @import "blocks/road";
 @import "blocks/simple-card";
 @import "blocks/simple-card-row";
+@import "blocks/links-row";
 
 @import "sections/section-ready";
 @import "sections/section-nav";
@@ -55,3 +56,6 @@
 @import "sections/section-case-item";
 @import "sections/section-contact-info";
 @import "sections/section-about";
+@import "sections/section-service-range";
+@import "sections/section-success";
+@import "sections/section-icon-list";
