--- a/src/scss/components/sections/_section-partner.scss
+++ b/src/scss/components/sections/_section-partner.scss
@@ -20,11 +20,41 @@
 			background-repeat: no-repeat;
 			content: "";
 		}
+
+		.section-partner--blue & {
+			padding-bottom: 52px;
+			&::before {
+				background-image: linear-gradient(to right, #EEF6FC 21.1%, rgba(255, 255, 255, 0) 80.7%);
+				background-color: unset;
+			}
+		}
 	}
 
 	&__col {
 		width: 100%;
 		max-width: 996px;
+
+		&--content {
+			.section-partner--blue & {
+				padding-top: 60px;
+				max-width: 70%;
+			}
+			.section-partner--type2 & {
+				max-width: 50%;
+			}
+		}
+
+		&--img {
+			.section-partner--blue & {
+				max-width: 30%;
+			}
+			.section-partner--type2 & {
+				max-width: 50%;
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+			}
+		}
 	}
 
 	&__title {
@@ -42,6 +72,10 @@
 		font-size: 28px;
 		line-height: 28px;
 		font-weight: 500;
+
+		&--type2 {
+			font-family: $font-secondary;
+		}
 	}
 
 	&__button {
@@ -58,10 +92,20 @@
 		border-radius: 25px;
 		background-color: $color-white;
 		list-style-type: none;
+
+		.section-partner--blue & {
+			display: inline-flex;
+			margin-bottom: 6px;
+			padding: 22px 20px;
+		}
 	}
 
 	&__link-elem {
 		padding: 0 12px;
+
+		.section-partner--blue & {
+			padding: 0 18px;
+		}
 	}
 
 	&__link {
@@ -96,5 +140,20 @@
 				transform: translateX(-50%);
 			}
 		}
+	}
+
+	&__list-arrow-block {
+		display: flex;
+		column-gap: 57px;
+		margin-bottom: 42px;
+	}
+
+	&__row {
+		display: flex;
+		column-gap: 30px;
+	}
+
+	&__image {
+		max-width: 100%;
 	}
 }
