--- a/src/service-list.pug
+++ b/src/service-list.pug
@@ -20,65 +20,62 @@ block content
 		p.section-service-list__description Предоставляем полный спектр складских услуг для Вашего бизнеса
 		.section-service-list__grid
 			// Card
-			a.section-service-list__card.card.card--text-top.card--text-top-medium(href="#")
-				.card__text-box
-					p.card__text Major Terminal обладает богатым опытом работы
+			a.section-service-list__card.card.card--with-icon.card--small-radius(href="#")
+				img.card__icon(src="images/section-service-list/icon1.svg")
+				.card__title-box
+					p.card__title Ответственное
 						br
-						| с клиентами сектора Fashion.
-					p.card__text-line Компания активно внедряет современные технологии в
+						|хранение
+				span.button.button--white.button--xs.card__btn-more Подробнее
+				.card__bg-box
+					img.card__bg(src="images/section-service-list/bg7.jpg", alt)
+			// Card
+			a.section-service-list__card.card.card--with-icon.card--small-radius(href="#")
+				img.card__icon(src="images/section-service-list/icon2.svg")
+				.card__title-box
+					p.card__title Складская
 						br
-						| сфере логистики, особенно актуальные в данном сегменте.
+						|обработка
+				span.button.button--white.button--xs.card__btn-more Подробнее
+				.card__bg-box
+					img.card__bg(src="images/section-service-list/bg8.jpg", alt)
+			// Card
+			a.section-service-list__card.card.card--with-icon.card--small-radius(href="#")
+				img.card__icon(src="images/section-service-list/icon3.svg")
+				.card__title-box
+					p.card__title Копакинг
+				span.button.button--white.button--xs.card__btn-more Подробнее
+				.card__bg-box
+					img.card__bg(src="images/section-service-list/bg9.jpg", alt)
+			// Card
+			a.section-service-list__card.card.card--with-icon.card--small-radius(href="#")
+				img.card__icon(src="images/section-service-list/icon4.svg")
 				.card__title-box
 					p.card__title Фулфилмент
 				span.button.button--white.button--xs.card__btn-more Подробнее
 				.card__bg-box
-					img.card__bg(src="images/section-service-list/bg1.jpg", alt)
+					img.card__bg(src="images/section-service-list/bg10.jpg", alt)
 			// Card
-			a.section-service-list__card.card.card--text-top.card--text-top-medium(href="#")
-				.card__text-box
-					p.card__text Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.
+			a.section-service-list__card.card.card--with-icon.card--small-radius(href="#")
+				img.card__icon(src="images/section-service-list/icon5.svg")
 				.card__title-box
-					p.card__title Упаковка
+					p.card__title Маркировка
+						br
+						|честный знак
 				span.button.button--white.button--xs.card__btn-more Подробнее
 				.card__bg-box
-					img.card__bg(src="images/section-service-list/bg2.jpg", alt)
+					img.card__bg(src="images/section-service-list/bg11.jpg", alt)
 			// Card
-			a.section-service-list__card.card.card--text-top.card--text-top-medium(href="#")
-				.card__text-box
-					p.card__text Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.
+			a.section-service-list__card.card.card--with-icon.card--small-radius(href="#")
+				img.card__icon(src="images/section-service-list/icon6.svg")
 				.card__title-box
-					p.card__title Хранение товара
+					p.card__title Работа с
+						br
+						|комплектами
 				span.button.button--white.button--xs.card__btn-more Подробнее
 				.card__bg-box
-					img.card__bg(src="images/section-service-list/bg3.jpg", alt)
-			// Card
-			a.section-service-list__card.card.card--text-top.card--text-top-medium(href="#")
-				.card__text-box
-					p.card__text Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.
-				.card__title-box
-					p.card__title Таможенный склад
-				span.button.button--white.button--xs.card__btn-more Подробнее
-				.card__bg-box
-					img.card__bg(src="images/section-service-list/bg4.jpg", alt)
-			// Card
-			a.section-service-list__card.card.card--text-top.card--text-top-medium(href="#")
-				.card__text-box
-					p.card__text Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.
-				.card__title-box
-					p.card__title Комплектация
-				span.button.button--white.button--xs.card__btn-more Подробнее
-				.card__bg-box
-					img.card__bg(src="images/section-service-list/bg5.jpg", alt)
-			// Card
-			a.section-service-list__card.card.card--text-top.card--text-top-medium(href="#")
-				.card__text-box
-					p.card__text Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.
-				.card__title-box
-					p.card__title Сортировка
-				span.button.button--white.button--xs.card__btn-more Подробнее
-				.card__bg-box
-					img.card__bg(src="images/section-service-list/bg6.jpg", alt)
+					img.card__bg(src="images/section-service-list/bg12.jpg", alt)
 		.section-service-list__button-row
-			button.button.button--outline-blue.button--sm.section-service-list__button Показать еще
+			button.button.button--outline-blue.button--md.section-service-list__button Показать еще
 
 
