--- a/src/industry.pug
+++ b/src/industry.pug
@@ -12,277 +12,122 @@ append vars
 		link.icon32x32 = "favicons/favicon-32x32.png"
 
 block content
+	+breadcrumb(['Главная'], 'Индустрии')(class="container")
 	// Section Hero
 	section.section-hero.section-hero--industry
 		.container
-			+breadcrumb(['Главная'], 'Индустрии')(class="section-hero__breadcrumb breadcrumb--white")
-			h1.section-hero__title
-				span.text-weight-light Индустрия
+			.section-hero__content
+				h1.section-hero__title
+					span.text-weight-light Индустрия
+					|
+					| Fashion
+				p.section-hero__text Major Terminal помогает своим клиентам в сферы красоты и люкса разрабатывать продукты и модели цепочек поставок
+				img.section-hero__bg(src="images/section-hero/bg6.jpg", alt)
+	// Section Success
+	.section-success.container
+		.section-success__grid
+			.section-success__elem
+				p.section-success__value 5 млн
+				p.section-success__text Выгрузка (коробов) / год
+			.section-success__elem
+				p.section-success__value 100 млн
+				p.section-success__text Приемка (штук) / год
+			.section-success__elem
+				p.section-success__value 400 тыс
+				p.section-success__text Восстановление качества
+			.section-success__elem
+				p.section-success__value 15 млн
+				p.section-success__text Стикеров (штук) / год
+
+	// Section Service range
+	section.section-service-range
+		.container
+			h2.h2.section-service-range__title Учитываем
 				|
-				| Fashion
-			p.section-hero__text Major Terminal обладает богатым опытом работы с клиентами сектора Fashion.
+				|
+				span.text-red все
+				|
+				| особенности
 				br
-				| Компания активно внедряет современные технологии в сфере логистики, особенно актуальные в данном сегменте.
-			img.section-hero__bg(src="images/section-hero/bg3.jpg", alt)
-			// Results
-			.results
-				.results__row
-					// Col
-					.results__col
-						p.results__value 5 млн
-						p.results__text Выгрузка (коробов) / год
-					// Col
-					.results__col
-						p.results__value 100 млн
-						p.results__text Приемка (штук) / год
-					// Col
-					.results__col
-						p.results__value 400 тыс
-						p.results__text Восстановление качества
-							br
-							|(штук) / год
-					// Col
-					.results__col
-						p.results__value 15 млн
-						p.results__text Стикеров (штук) / год
-				a.button.button--white.button--md.results__button(href="#") Связаться с нами
-	// Section Request
-	section.section-request.container
-		h2.h2.text-blue.section-request__title
-			span.text-blue-light Учитываем
-			|
-			|
-			span.text-red все
-			|
-			| особенности
-			br
-			| индустрии Fashion
-		.section-request__row
-			// Link
-			a.section-request__link(href="#")
-				+svg("chevron-right")(class="section-request__link-arrow")
-				p.section-request__link-title Ярко выраженная сезонность
-			// Link
-			a.section-request__link(href="#")
-				+svg("chevron-right")(class="section-request__link-arrow")
-				p.section-request__link-title Предпродажная подготовка
-			// Link
-			a.section-request__link(href="#")
-				+svg("chevron-right")(class="section-request__link-arrow")
-				p.section-request__link-title Таможенный склад
-			// Link
-			a.section-request__link(href="#")
-				+svg("chevron-right")(class="section-request__link-arrow")
-				p.section-request__link-title Обширный справочник
-			// Link
-			a.section-request__link(href="#")
-				+svg("chevron-right")(class="section-request__link-arrow")
-				p.section-request__link-title Срок оказания услуг
-
-		// Tabs
-		.tabs.tabs--blue
-			ul.tabs__nav-list
-				li.tabs__nav-elem
-					button.tabs__nav-button.tabs__nav-button--active(data-content="content1") Сортировка
-				li.tabs__nav-elem
-					button.tabs__nav-button(data-content="content2") Склад
-				li.tabs__nav-elem
-					button.tabs__nav-button(data-content="content3") Доп.услуги
-				li.tabs__nav-elem
-					button.tabs__nav-button(data-content="content4") Дистрибуция
-			.tabs__content-box
-				// Content
-				.section-request__tab-content.tabs__content.tabs__content--active#content1
-					.section-request__content-row
-						.section-request__col
-							h2.h2.text-blue.section-request__content-title Все
-								|
-								|
-								span.text-blue-light складские услуги
-								br
-								| у одного оператора
-							ul.list-arrow.list-arrow--red.section-request__list
-								li.list-arrow__elem Cтикеровка, маркировка (включая Честный Знак)
-								li.list-arrow__elem Переупаковка
-								li.list-arrow__elem Копакинг
-								li.list-arrow__elem Измерение МГХ
-							a.button.button--blue.button--md.section-request__button(href="#") Оставить заявку
-						.section-request__col
-							img.section-request__img(src="images/section-request/img.svg", alt)
-				// Content
-				.tabs__content.section-request__tab-content.tabs__content#content2
-					.section-request__content-row
-						.section-request__col
-							h2.h2.text-blue.section-request__title Возможности Major Terminal позволяют организовать
-								br
-								span.text-weight-light следующие типы хранения для индустрии
-								|
-								|
-								| Fashion
-							ul.list-arrow.list-arrow--two-col.list-arrow--red.section-request__list
-								li.list-arrow__elem Стеллажное
-								li.list-arrow__elem Полочное
-								li.list-arrow__elem Напольное
-								li.list-arrow__elem Вашельное
-							a.button.button--blue.button--md.section-request__button(href="#") Оставить заявку
-						.section-request__col
-							img.section-request__img(src="images/section-request/img2.svg", alt)
-				// Content
-				.tabs__content.section-request__tab-content.section-request__tab-content--n1#content3
-					.section-request__content-row
-						.section-request__col
-							h2.h2.text-blue.section-request__content-title Все
-								|
-								|
-								span.text-blue-light складские услуги
-								br
-								| у одного оператора
-							ul.list-arrow.list-arrow--red.section-request__list
-								li.list-arrow__elem Cтикеровка, маркировка (включая Честный Знак)
-								li.list-arrow__elem Переупаковка
-								li.list-arrow__elem Копакинг
-								li.list-arrow__elem Измерение МГХ
-							a.button.button--blue.button--md.section-request__button(href="#") Оставить заявку
-						.section-request__col
-							img.section-request__img(src="images/section-request/img.svg", alt)
-				// Content
-				.tabs__content.section-request__tab-content.section-request__tab-content--n1#content4
-					.section-request__content-row
-						.section-request__col
-							h2.h2.text-blue.section-request__content-title Дистрибуция по России
-							ul.list-arrow.list-arrow--red.section-request__list
-								li.list-arrow__elem Подбор типа доставки (по времени, цене, значимости)
-								li.list-arrow__elem Отслеживание грузов, предварительные оповещения получателей
-								li.list-arrow__elem Координация поставщиков транспорта
-							a.button.button--blue.button--md.section-request__button(href="#") Оставить заявку
-						.section-request__col
-							img.section-request__img(src="images/section-request/img4.svg", alt)
-
+				|индустрии Fashion
+			.links-row.section-service-range__links
+				a.links-row__link(href="#") Организация забора товара
+				a.links-row__link(href="#") Предпродажная подготовка
+				a.links-row__link(href="#") Таможенный склад
+				a.links-row__link(href="#") Срок оказания услуг
+		// Section Partner
+		.section-partner.section-partner--blue.container
+			.section-partner__content
+				ul.section-partner__link-list
+					li.section-partner__link-elem
+						a.section-partner__link(href="#") Услуги
+					li.section-partner__link-elem
+						a.section-partner__link(href="#") Таможенный склад
+					li.section-partner__link-elem
+						a.section-partner__link(href="#") Предпродажная подготовка
+					li.section-partner__link-elem
+						a.section-partner__link(href="#") Дистрибуция
+				.section-partner__row
+					.section-partner__col.section-partner__col--content
+						.section-partner__list-arrow-block
+							ul.list-arrow.list-arrow--red
+								li.list-arrow__elem Разгрузка, приемка, контроль качества
+								li.list-arrow__elem Сортировка товаров по группам и категория
+								li.list-arrow__elem Подбор и отгрузка по FIFO, FEFO, лотам, партиям
+								li.list-arrow__elem Возвратная логистика
+							ul.list-arrow.list-arrow--red
+								li.list-arrow__elem Кросс-докинг
+								li.list-arrow__elem Выбраковка
+								li.list-arrow__elem Восстановление качества
+								li.list-arrow__elem Маркировка
+						a.button.button--outline-blue.button--md.section-partner__button(href="#") Оставить заявку
+					.section-partner__col.section-partner__col--img
+						img.section-partner__image(src="images/section-partner/img1.svg", alt)
 	// Section Description
-	.section-description.container
-		h2.h2.text-blue.section-description__title Опции и преимущества
-		.section-description__grid1
+	section.section-description.container
+		h2.h2.section-description__title Опции и преимущества
+		.section-description__panel-grid
 			// Panel
-			.section-description__panel.section-description__panel--with-blue-box
-				ul.section-description__list
-					li.section-description__list-elem
-						span.section-description__icon-box
-							img.section-description__icon(src="images/section-description/icon1.png", alt)
-						| Доступ
-					li.section-description__list-elem
-						span.section-description__icon-box
-							img.section-description__icon(src="images/section-description/icon5.png", alt)
-						| Документы
-					li.section-description__list-elem
-						span.section-description__icon-box
-							img.section-description__icon(src="images/section-description/icon2.png", alt)
-						| Безопасность
-					li.section-description__list-elem
-						span.section-description__icon-box
-							img.section-description__icon(src="images/section-description/icon6.png", alt)
-						| Отчеты
-					li.section-description__list-elem
-						span.section-description__icon-box
-							img.section-description__icon(src="images/section-description/icon3.png", alt)
-						| Каталог
-					li.section-description__list-elem
-						span.section-description__icon-box
-							img.section-description__icon(src="images/section-description/icon7.png", alt)
-						| Качество
-					li.section-description__list-elem
-						span.section-description__icon-box
-							img.section-description__icon(src="images/section-description/icon4.png", alt)
-						| 24/7
-					li.section-description__list-elem
-						span.section-description__icon-box
-							img.section-description__icon(src="images/section-description/icon8.png", alt)
-						| Управление
-				.section-description__panel-row
-					.section-description__panel-blue-box
-						h3.section-description__panel-title Личный кабинет клиента
-						p.section-description__panel-text Управление и отчетность в едином личном кабинете
-							br
-							| с множеством полезных функций
-					img.section-description__panel-logo(src="images/section-description/logo.png", alt)
+			article.section-description__panel
+				.section-description__panel-content
+					h3.section-description__panel-title Личный кабинет клиента
+					p.section-description__panel-text Управление и отчетность в едином личном кабинете с множеством полезных функций
+					a.section-description__panel-link(href="#") Перейти в кабинет
+				img.section-description__panel-img(src="images/section-description/img1.png", alt)
 			// Panel
-			.section-description__panel.section-description__panel--with-image.section-description__panel--corner--bottom-right
-				img.section-description__panel-img(src="images/section-description/img2.jpg", alt)
-				.section-description__panel-content-box
-					h3.section-description__panel-title Интеграция с системами клиента
-					p.section-description__panel-text Система управления складом и транспортом, а также собственный департамент разработки помогут реализовать решение для автоматизации ваших уникальных процессов.
-		.section-description__grid2
+			article.section-description__panel
+				img.section-description__panel-img(src="images/section-description/img2.svg", alt)
+				.section-description__panel-content
+					h3.section-description__panel-title Интеграция с WMS системой
+					p.section-description__panel-text Система управления складом Major собственной разработки. Команда разработчиков и поддержки WMS в режиме 24/7.
+					a.section-description__panel-link(href="#") Узнать подробнее
 			// Panel
-			.section-description__panel.section-description__panel--corner--top-left
-				h3.section-description__panel-title Служба качества
-				p.section-description__panel-text Разработка стандартов качества, правил
-					br
-					| и инструкций компании
-				a.section-description__panel-link(href="#") Узнать подробнее
+			article.section-description__panel
+				img.section-description__panel-img(src="images/section-description/img3.svg", alt)
+				.section-description__panel-content
+					h3.section-description__panel-title Служба качества
+					p.section-description__panel-text Система управления складом Major собственной разработки. Команда разработчиков и поддержки WMS в режиме 24/7.
+					a.section-description__panel-link(href="#") Узнать подробнее
 			// Panel
-			.section-description__panel.section-description__panel--corner--top-right
-				h3.section-description__panel-title Интеграция с WMS системой
-				p.section-description__panel-text Система управления складом Major собственной разработки.
-					br
-					| Команда разработчиков и поддержки WMS в режиме 24/7.
-				a.section-description__panel-link(href="#") Узнать подробнее
+			article.section-description__panel
+				.section-description__panel-content
+					h3.section-description__panel-title Интеграция с системами клиента
+					p.section-description__panel-text Собственный департамент разработки помогут реализовать решение для автоматизации ваших бизнес процессов.
+					a.section-description__panel-link(href="#") Скачать презентацию
+				img.section-description__panel-img(src="images/section-description/img4.svg", alt)
+		p.section-description__text-block
+			strong Major Terminal
+			|
+			| помогает своим клиентам в сферы красоты и люкса разрабатывать продукты и модели цепочек поставок, отвечающие растущим запросам потребителей и высоким ожиданиям от бренда. Мы предлагаем широкий ассортимент высококачественных логистических услуг в сфере красоты и люкса, от многоканального выполнения заказов до глобальных транспортных или пере упаковочных решений, адаптированных к рынкам предметов роскоши, что позволяет брендам отражать свой имидж и выполнять обязательства перед людьми и экологией в своей цепочке поставок.
 
-	// Section Slider
-	.section-slider
-		.container
-			.swiper.slider.slider--simple.section-slider__slider
-				.swiper-wrapper
-					// Slide
-					.swiper-slide.slider__slide.slider__slide--video
-						.slider__slide-bg-box
-							img.slider__slide-bg(src="images/section-slider/slide1.jpg", alt)
-						button.slider__play-button
-							+svg("play")(class="slider__play-icon")
-					// Slide
-					.swiper-slide.slider__slide
-						.slider__slide-bg-box
-							img.slider__slide-bg(src="images/section-slider/slide2.jpg", alt)
-					// Slide
-					.swiper-slide.slider__slide
-						.slider__slide-bg-box
-							img.slider__slide-bg(src="images/section-slider/slide3.jpg", alt)
-					// Slide
-					.swiper-slide.slider__slide
-						.slider__slide-bg-box
-							img.slider__slide-bg(src="images/section-slider/slide4.jpg", alt)
-					// Slide
-					.swiper-slide.slider__slide
-						.slider__slide-bg-box
-							img.slider__slide-bg(src="images/section-slider/slide1.jpg", alt)
-					// Slide
-					.swiper-slide.slider__slide
-						.slider__slide-bg-box
-							img.slider__slide-bg(src="images/section-slider/slide2.jpg", alt)
-				.slider__nav-box
-					.slider__nav
-						button.slider__btn.slider__btn--prev(aria-label="Назад")
-							+svg("chevron-slider")(class="slider__btn-arrow")
-						button.slider__btn.slider__btn--next(aria-label="Вперед")
-							+svg("chevron-slider")(class="slider__btn-arrow")
+		.section-description__photo-grid
+			.section-description__photo-box
+				img.section-description__photo-img(src="images/section-slider/slide1.jpg", alt)
+				button.section-description__photo-play-button
+					+svg("play")(class="section-description__photo-play-icon")
+			.section-description__photo-box
+				img.section-description__photo-img(src="images/section-slider/slide2.jpg", alt)
+			.section-description__photo-box
+				img.section-description__photo-img(src="images/section-slider/slide3.jpg", alt)
 
-
-	// Section Contacts
-	section.section-contacts
-		.container
-			h2.h2.text-white.section-contacts__title Есть вопросы? Свяжитесь с нами!
-			form.section-contacts__form
-				.section-contacts__form-row
-					.section-contacts__form-col.section-contacts__form-col--inputs
-						.section-contacts__input-box
-							input.form-control.section-contacts__form-input(type="text", placeholder="Имя")
-						.section-contacts__input-box
-							input.form-control.section-contacts__form-input(type="tel", placeholder="*Телефон")
-						.section-contacts__input-box
-							input.form-control.section-contacts__form-input(type="email", placeholder="*Адрес электронной почты")
-					.section-contacts__form-col.section-contacts__form-col--message
-						.section-contacts__textarea-box
-							textarea.form-control.form-control--textarea.section-contacts__form-textarea(placeholder="*Комментарий...")
-				.section-contacts__form-submit-box
-					button.button.button--white.button--lg.section-contacts__form-submit Отправить
-
-
-
+		p.section-description__text-block Индустрия Fashion сталкивается с различными проблемами, такими как изменчивая мода, доступная роскошь или персонализированные покупки. Более того, ожидания потребителей меняются за счет технологий, соображений устойчивости  и новых участников рынка. Вот почему косметическим компаниям необходимо принимать во внимание транспортные и логистические аспекты, чтобы облегчить любые долгосрочные цепочки поставок и проблемы со спросом.
