--- a/src/page-list.pug
+++ b/src/page-list.pug
@@ -18,39 +18,33 @@ block content
 				a(href="index.html", target="_blank") Главная
 			li.list-arrow__elem
 				a(href="404.html", target="_blank") 404
-			//li.list-arrow__elem
+			//-li.list-arrow__elem
 				a(href="contacts.html", target="_blank") Контакты
-			//li.list-arrow__elem
+			li.list-arrow__elem
 				a(href="about.html", target="_blank") О нас (4 вкладки)
-			//li.list-arrow__elem -----------------------------------
 			li.list-arrow__elem
 				a(href="industry-list.html", target="_blank") Индустрии
-			//li.list-arrow__elem
-				a(href="industry.html", target="_blank") Карточка индустрии (3 вкладки)
-			//li.list-arrow__elem -----------------------------------
+			li.list-arrow__elem
+				a(href="industry.html", target="_blank") Карточка индустрии
 			li.list-arrow__elem
 				a(href="case-list.html", target="_blank") Наши кейсы
 			li.list-arrow__elem
 				a(href="case-item.html", target="_blank") Карточка кейса
-			//li.list-arrow__elem -----------------------------------
-			//li.list-arrow__elem
+			li.list-arrow__elem
 				a(href="service-list.html", target="_blank") Услуги
-			//li.list-arrow__elem
+			li.list-arrow__elem
 				a(href="service.html", target="_blank") Услуга
-			//li.list-arrow__elem -----------------------------------
 			li.list-arrow__elem
 				a(href="press-list.html", target="_blank") Пресс-релизы
 			li.list-arrow__elem
 				a(href="press-item.html", target="_blank") Карточка пресс-релиза
-			//li.list-arrow__elem -----------------------------------
 			li.list-arrow__elem
 				a(href="career.html", target="_blank") Карьера
-			//li.list-arrow__elem
-				a(href="career-list.html", target="_blank") Список вакансий
 			li.list-arrow__elem
 				a(href="career-item.html", target="_blank") Карточка вакансии
-			//li.list-arrow__elem -----------------------------------
-			//li.list-arrow__elem
+			li.list-arrow__elem
 				a(href="department.html", target="_blank") Отдел службы качества
-			//li.list-arrow__elem
+			li.list-arrow__elem
+				a(href="protection.html", target="_blank") Охрана труда
+			li.list-arrow__elem
 				a(href="terminals.html", target="_blank") Наши терминалы
