--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -28,15 +28,15 @@ header.header
 			.header__lang
 				.dropdown.dropdown--with-flag
 					.dropdown__value-box
-						+svg("flag-ru")(class="dropdown__flag")
+						img.dropdown__flag(src="images/common/flag-ru.svg", alt)
 						input.dropdown__value(type="text", value="Русский", disabled)
-						+svg("chevron-dropdown")(class="dropdown__arrow")
+						+svg("chevron-dropdown", true)(class="dropdown__arrow")
 					ul.dropdown__options-list
 						li.dropdown__option.dropdown__option--selected(data-value="Русский")
-							+svg("flag-ru")(class="dropdown__flag")
+							img.dropdown__flag(src="images/common/flag-ru.svg", alt)
 							| Русский
 						li.dropdown__option(data-value="English")
-							+svg("flag-ru")(class="dropdown__flag")
+							img.dropdown__flag(src="images/common/flag-en.svg", alt)
 							| English
 	// Navigation
 	.header__row
