--- a/src/scss/components/blocks/_about-download.scss
+++ b/src/scss/components/blocks/_about-download.scss
@@ -4,36 +4,63 @@
 	list-style-type: none;
 
 	&__block {
-		padding: 32px 40px 29px;
-		background-color: $color-white;
-		border-radius: 25px;
-		font-family: $font-secondary;
-		font-weight: 800;
-		color: $color-blue;
-
 		&:not(:last-child) {
 			margin-bottom: 24px;
 		}
 	}
 
 	&__title {
-		margin-top: 0;
-		margin-bottom: 16px;
-		font-family: $font-secondary;
-		font-size: 24px;
-		line-height: 32px;
+		display: flex;
+		align-items: center;
+		margin: 0;
 	}
 
 	&__link {
-		margin: 0;
-		font-family: $font-secondary;
-		font-size: 14px;
-		line-height: 18px;
-		color: $color-blue;
+		position: relative;
+		z-index: 0;
+		overflow: hidden;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		padding: 39px 45px 36px 39px;
+		border: 1px solid #C5E0F2;
+		font-size: 24px;
+		line-height: 50px;
+		font-weight: 800;
+		color: #0E1844;
+		border-radius: 25px;
 		transition: color $transition-default;
 
-		&:hover {
-			color: $color-red;
+		&::before {
+			position: absolute;
+			z-index: -1;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background: linear-gradient(to right, #F2F6FA 0.58%, rgba(255, 255, 255, 0) 100%);
+			content: "";
+			transition: opacity $transition-default;
 		}
+
+		&:hover {
+			color: $color-white;
+			background-color: $color-blue;
+
+			&::before {
+				opacity: 0;
+			}
+		}
+	}
+
+	&__pdf-icon {
+		width: 32px;
+		height: 42px;
+		margin-right: 28px;
+	}
+
+	&__download-icon {
+		width: 24px;
+		height: 24px;
 	}
 }
