--- a/src/scss/components/sections/_section-hero.scss
+++ b/src/scss/components/sections/_section-hero.scss
@@ -8,14 +8,39 @@
 		margin-bottom: 20px;
 	}
 
+	&--industry {
+		margin-top: 12px;
+		margin-bottom: 65px;
+	}
+
 	&--case {
 		margin-top: 10px;
 		margin-bottom: 58px;
 	}
 
+	&--simple {
+		margin-top: 18px;
+		margin-bottom: 69px;
+	}
+
+	&--about {
+		margin-bottom: 30px;
+	}
+
 	&__content {
 		position: relative;
 		padding: 67px 56px 53px 34px;
+
+		.section-hero--industry & {
+			padding: 67px 55px 27px;
+		}
+
+		.section-hero--simple & {
+			padding: 32px 78px 32px 51px;
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+		}
 	}
 
 	&__bg {
@@ -26,14 +51,7 @@
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
-
-		.section-hero--career & {
-			border-radius: 25px;
-		}
-
-		.section-hero--case & {
-			border-radius: 25px;
-		}
+		border-radius: 25px;
 	}
 
 	&__breadcrumb {
@@ -68,6 +86,13 @@
 			line-height: 72px;
 			font-weight: 700;
 			margin-bottom: 27px;
+		}
+
+		.section-hero--industry & {
+			font-size: 72px;
+			line-height: 72px;
+			font-weight: 700;
+			margin-bottom: 44px;
 		}
 	}
 
@@ -120,7 +145,8 @@
 		margin-bottom: 47px;
 	}
 
-	&__title-img {}
+	&__title-img {
+	}
 
 	&__call-text {
 		font-size: 24px;
@@ -146,5 +172,13 @@
 		width: 100%;
 		max-width: 980px;
 		margin-right: 30px;
+	}
+
+	&__slogan {
+		margin: 0;
+		font-family: $font-additional;
+		font-size: 24px;
+		line-height: 50px;
+		font-weight: 700;
 	}
 }
