--- a/src/scss/components/sections/_section-ready.scss
+++ b/src/scss/components/sections/_section-ready.scss
@@ -2,6 +2,10 @@
 	padding-top: 60px;
 	padding-bottom: 35px;
 
+	&--about {
+		padding-bottom: 66px;
+	}
+
 	&__title-box {
 		display: flex;
 		align-items: center;
