--- a/src/scss/components/sections/_section-service-list.scss
+++ b/src/scss/components/sections/_section-service-list.scss
@@ -2,9 +2,17 @@
 	padding-top: 20px;
 	padding-bottom: 60px;
 
+	&--service {
+		padding-top: 44px;
+	}
+
 	&__title {
 		margin-top: 0;
 		margin-bottom: 29px;
+
+		.section-service-list--service & {
+			margin-bottom: 56px;
+		}
 	}
 
 	&__description {
@@ -18,21 +26,15 @@
 
 	&__grid {
 		display: grid;
-		grid-template-columns: 1fr 0.32fr 1fr;
+		grid-template-columns: repeat(3, 1fr);
 		grid-column-gap: 32px;
 		grid-template-rows: auto;
-		grid-row-gap: 48px;
-		margin-bottom: 55px;
+		grid-row-gap: 36px;
+		margin-bottom: 68px;
 	}
 
 	&__card {
 		min-height: 379px;
-		&:nth-child(4n) {
-			grid-column: 2 / 4;
-		}
-		&:nth-child(4n-3) {
-			grid-column: 1 / 3;
-		}
 	}
 
 	&__button-row {
